k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-auth-service
  namespace: fastapi-auth
spec:
  type: ClusterIP
  selector:
    app: fastapi-auth
  ports:
    - name: http
      port: 8000
      targetPort: 8000
